サブコマンドの多層化を実装